deployment/backend/sitea-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sitea-backend
    app.kubernetes.io/component: sitea-backend
    app.kubernetes.io/instance: sitea-backend
    app.kubernetes.io/name: sitea-backend
    app.kubernetes.io/part-of: sitea-backend
    app.openshift.io/runtime: redhat
  name: sitea-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sitea-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sitea-backend
        deployment: sitea-backend
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker-5.ocpv.tamlab.rdu2.redhat.com
      containers:
      - image: quay.io/mrobson/simple-http-server:latest
        imagePullPolicy: Always
        name: http-server
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
