deployment/backend/sitea-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sitea-backend
    app.kubernetes.io/component: sitea-backend
    app.kubernetes.io/instance: sitea-backend
    app.kubernetes.io/name: sitea-backend
    app.kubernetes.io/part-of: sitea-backend
    app.openshift.io/runtime-version: micro
  name: sitea-backend
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sitea-backend
    deployment: sitea-backend
